// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ IssuePriorityFilter ]] renders IssuePriorityFilter with empty availableAnalyzers 1`] = `
"<zbadge-stub is-dot=\\"true\\" type=\\"success\\" size=\\"md\\">
  <z-button button-type=\\"secondary\\" size=\\"small\\" class=\\"text-vanilla-100 outline-none focus:outline-none\\">
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"items-center gap-x-1 xl:flex\\"><zicon-stub icon=\\"docker\\"></zicon-stub> <span class=\\"hidden md:block\\">
            docker
          </span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\"></zicon-stub>
    </div>
  </z-button>
</zbadge-stub>"
`;

exports[`[[ IssuePriorityFilter ]] renders IssuePriorityFilter with the store: {"selectedAnalyzer":"docker","level":"OWNER"} 1`] = `
"<zbadge-stub is-dot=\\"true\\" type=\\"success\\" size=\\"md\\">
  <z-button button-type=\\"secondary\\" size=\\"small\\" class=\\"text-vanilla-100 outline-none focus:outline-none\\">
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"items-center gap-x-1 xl:flex\\"><analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Dockerfile\\" shortcode=\\"docker\\" size=\\"base\\" class=\\"w-5 flex-shrink-0\\"></analyzerlogo-stub> <span class=\\"hidden md:block\\">
            Dockerfile
          </span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\"></zicon-stub>
    </div>
  </z-button>
</zbadge-stub>"
`;

exports[`[[ IssuePriorityFilter ]] renders IssuePriorityFilter with the store: {"selectedAnalyzer":"docker","level":"REPOSITORY"} 1`] = `
"<zbadge-stub is-dot=\\"true\\" type=\\"success\\" size=\\"md\\">
  <z-button button-type=\\"secondary\\" size=\\"small\\" class=\\"text-vanilla-100 outline-none focus:outline-none\\">
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"items-center gap-x-1 xl:flex\\"><analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Dockerfile\\" shortcode=\\"docker\\" size=\\"base\\" class=\\"w-5 flex-shrink-0\\"></analyzerlogo-stub> <span class=\\"hidden md:block\\">
            Dockerfile
          </span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\"></zicon-stub>
    </div>
  </z-button>
</zbadge-stub>"
`;
